my-apps/media/sabnzbd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  namespace: sabnzbd
  labels:
    app: sabnzbd
  annotations:
    ignore-check.kube-linter.io/run-as-non-root: "Application requires root for PUID/PGID mapping at startup"
    ignore-check.kube-linter.io/no-read-only-root-fs: "Legacy application requires writeable root for internal updates/logging"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sabnzbd
  template:
    metadata:
      labels:
        app: sabnzbd
      annotations:
        backup.velero.io/backup-volumes-excludes: media-root,appdata
    spec:
      containers:
        - name: sabnzbd
          image: lscr.io/linuxserver/sabnzbd:5.1.3
          imagePullPolicy: Always
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"  # Guarantee 0.5 cores
            limits:
              memory: "3Gi"
              cpu: "4000m"  # Allow it to burst up to 4 cores, but no more
          ports:
            - containerPort: 8090
          volumeMounts:
            - name: appdata
              mountPath: /config
              subPath: appdata/linuxserver-sabnzbd/config
            - name: media-root
              mountPath: /media
      volumes:
        - name: appdata
          persistentVolumeClaim:
            claimName: pvc-appdata
        - name: media-root
          persistentVolumeClaim:
            claimName: pvc-media-library
