my-apps/media/sabnzbd/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: sabnzbd
spec:
  type: ClusterIP
  selector:
    app: sabnzbd
  ports:
    - name: http
      port: 8090
      targetPort: 8090
